data/issues_raw/buildinstall/buildinstall_train_12285.txt
build_all_ios.sh fail with Error： redefinition of 'NoBarrier_CompareAndSwap'

./google/protobuf/stubs/atomicops_internals_atomicword_compat.h:53:19: error: redefinition of
      'NoBarrier_CompareAndSwap'
inline AtomicWord NoBarrier_CompareAndSwap(volatile AtomicWord* ptr,
                  ^
./google/protobuf/stubs/atomicops_internals_x86_gcc.h:55:17: note: previous definition is here
inline Atomic32 NoBarrier_CompareAndSwap(volatile Atomic32* ptr